--- a/front-end/app/templates/application.hbs
+++ b/front-end/app/templates/application.hbs
@@ -1,3 +1,10 @@
-<h2 id='title'>Welcome to Ember.js</h2>
+<h2>Rails Ember API</h2>
+
+<ul>
+  <li>{{link-to 'Home' 'index'}}</li>
+  <li>{{link-to 'Contacts' 'contacts'}}</li>
+</ul>
+
+<hr>
 
 {{outlet}}
