Add date formatting to contact template

--- a/front-end/app/templates/contact.hbs
+++ b/front-end/app/templates/contact.hbs
@@ -9,7 +9,7 @@
 </dl>
 
 <p>
-  Updated at: {{updatedAt}}
+  Updated at: {{formatted-date updatedAt 'MMMM Do, YYYY [at] h:mm'}}
   <br>
-  Created at: {{createdAt}}
+  Created at: {{formatted-date createdAt 'MMMM Do, YYYY [at] h:mm'}}
 </p>
